5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1585_1017.log
== TEST (2019-03-25 13:47:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
t1 = radians(float(input("Latitude de P1: ")))
r1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
r2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d= r.acos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1−g2)
print(d)
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:48:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
r1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
r2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d= r.acos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1−g2)
print(d)
-- ERROR:
File "XXXX", line 10
    d= r.acos(sin(t1).sin(t2)+cos(t1).cos(t2).cos(g1−g2)
                                                      ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:48:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
r1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
r2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d= r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)
print(d)
-- EXECUTION TIME:
0.12647
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 10
    d= r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1\u2212g2)
                                                      ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:48:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
r1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
r2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d= r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)
print(round(d,2)
-- EXECUTION TIME:
0.194458
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 10
    d= r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1\u2212g2)
                                                      ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:48:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
r1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
r2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d= r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)
print(round(d,2)
-- ERROR:
File "XXXX", line 10
    d= r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)
                                                      ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:49:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
g2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d= r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)
print(round(d,2)
-- ERROR:
File "XXXX", line 10
    d= r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2)
                                                      ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:50:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
g2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d = r* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(round(d,2)
-- ERROR:
File "XXXX", line 10
    d = r* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                        ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:51:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
g2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d = r* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(round(d,2))
-- ERROR:
File "XXXX", line 10
    d = r* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                        ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:51:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
g2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d = r* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(round(d,2))
-- ERROR:
File "XXXX", line 10
    d = r* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                        ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:51:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
g2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d = r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(round(d,2))
-- ERROR:
File "XXXX", line 10
    d = r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:19:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
g2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d = r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(round(d,2))
-- EXECUTION TIME:
0.131486
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 10
    d = r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1\u2212g2))
                                                       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:21:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
g2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d = r* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1- g2))
print(round(d,2))
-- EXECUTION TIME:
0.185259
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:27:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
g2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d = r* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1- g2))
print(round(d,2))
-- EXECUTION TIME:
0.189162
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:42:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("latitude de P2: ")))
t2 = radians(float(input("latitude de P3: ")))
g2 = radians(float(input("latitude de P4: ")))
r = 6371.01
d = r* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1- g2))
print(round(d,2))
-- EXECUTION TIME:
0.181968
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
